# seeking_and_blundering

./: .editorconfig  .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  SimpleNamespace_demo.py  algorithms.py  atexit_demo.py  context_manager_demo.py  conventionalcommit.json  dataclass_demo.py  git_enhancement.sh  install_commitlint.txt  install_git_enhancement_packages.sh  linked_list_demo.py  main.py  property_demo.py  pyproject.toml  requirements.txt  sample.yml  sandbox.py  scratch_skatch.py  test_algorithms.py
.circleci/: config.yml
IAC/: main.tf
chargebee_scraping/: pyproject.toml
chargebee_scraping/chargebee_scraping/: chargebee_events.html  main.py  table_events.json
conf/: .gitlint
docker/pyspark/: Dockerfile
docker/spark/: Dockerfile
just/: justfile
poetry-demo/: pyproject.toml
protobuf_python/: addressbook.proto  addressbook_pb2.py
resource/: sample.json  sample.yml
sample/: sample.yml
src/: SimpleNamespace_demo.py  __init__.py  atexit_demo.py  binary_search_demo.py  context_manager_demo.py  dataclass_demo.py  demo_asyncio.py  demo_heapq.py  demo_minio.py  demo_mock.py  exception_palyground.py  formatter_marker_demo.py  global_variable_demo.py  lastpass_demo.py  main.py  property_demo.py  scratch_skatch.py  simple_etl.py  spark_streaming.py  stock_data_etl.ipynb  test_algorithms.py  variable_assignment_demo.py
tests/: demo_magicmock.py  fixture_scope.py  test_assert.py  test_binary_search.py  test_magicmock.py  test_mocker_patch.py  test_remove_nth_node_from_end_of_list.py  test_simple_etl.py
(+15 files in other folders)
